feat: add base components

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^5.1.4",
     "@react-navigation/native": "^7.1.6",
+    "@rn-primitives/slot": "^1.1.0",
+    "@rn-primitives/types": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~53.0.9",
     "expo-font": "~13.3.1",
@@ -26,6 +29,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
+    "lucide-react-native": "^0.509.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -34,6 +38,7 @@
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-svg": "^15.11.2",
     "react-native-web": "~0.20.0",
     "sonner-native": "^0.19.1",
     "tailwind-merge": "^3.2.0",
