--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@gorhom/bottom-sheet": "^5.1.4",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/native": "^7.1.6",
+    "@rn-primitives/avatar": "^1.1.0",
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
     "class-variance-authority": "^0.7.1",
